--- a/app/globals.css
+++ b/app/globals.css
@@ -17,11 +17,29 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: #000000;
+    overflow-x: hidden;
 }
+
+.Carousel{
+  animation: carousel 3000s linear infinite;
+  display: flex;
+  flex-wrap: nowrap;
+  width: 100vw;
+}
+.Block{
+  flex-shrink: 0;
+  width: 150px;
+}
+@keyframes carousel{
+  0%   { transform: translate3d(0, 0, 0); }
+  100% { transform: translate3d(-20000px, 0, 0); }
+}
+
+
+/* 
+000000 
+352F44 
+5C5470 
+EE9322 
+*/
