--- a/app/globals.css
+++ b/app/globals.css
@@ -2,34 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
 
-body {
-  background-color: black;
+body{
   overflow-x: hidden;
-}
-
-main {
-  background: linear-gradient(
-    to right top,
-    rgba(0, 0, 0, 0) 20%,
-    rgba(53, 47, 68, 0.7) 32%,
-    rgba(0, 0, 0, 0.7) 50%,
-    rgba(92, 84, 112, 0.7) 62%,
-    rgba(0, 0, 0, 0.7) 100%
-  );
 }
 
 .Carousel {
@@ -50,6 +26,25 @@ main {
     transform: translate3d(-20000px, 0, 0);
   }
 }
+
+.shadow-orange {
+  box-shadow: 8px 8px 32px 8px rgba(172, 55, 55, 0.3);
+
+}
+
+
+.opacity-decrease {
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(238, 147, 34, 0.2) 100%
+  );
+}
+
+.morphism {
+  backdrop-filter: blur( 22.5px );
+  -webkit-backdrop-filter: blur( 22.5px );
+  }
 
 /* 
 000000 
